# blumensystems-assignment

./: .gitignore  README.md
assignment/: README.md
assignment/backend/: pyproject.toml
assignment/backend/api/: types.py
assignment/backend/scripts/: 1-explore_data.py  build_image.sh  deploy.sh  push_image.sh
assignment/backend/tests/: test_main.py
blumensystems/: README.md
blumensystems/backend/: Dockerfile  entrypoint.sh
blumensystems/backend/api/: main.py
blumensystems/backend/scripts/: 2-load_data.sh  format.sh  run_dev_server.sh
